# progetto-praticamente-finito

./: CMakeLists.txt  GIOCO.c  README.md  azioni_mazzo.c  effetti_carteIstantanee.c  effetti_cartePunto.c  fase_carteIstantanee.c  fase_punteggio.c  intestazione.h  libreria_funzioni.h  main.c  preparazione.c  scelta_1.c  scelta_azione.c
